--- a/service-deployment.yaml
+++ b/service-deployment.yaml
@@ -16,16 +16,22 @@ spec:
         - name: kotlin-service
           image: shoubhikghosh83/kotlin-service:latest
           imagePullPolicy: Always
-          resources:
-            requests:
-              memory: '512Mi'
-              cpu: '250m'
-            limits:
-              memory: '1Gi'
-              cpu: '500m'
           ports:
             - name: http
-              containerPort: 8091
+              containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            timeoutSeconds: 3
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 10
 ---
 
 apiVersion: v1
@@ -37,7 +43,8 @@ metadata:
 spec:
   selector:
     app: kotlin-service
-  type: LoadBalancer
+  type: NodePort
   ports:
-    - port: 8080
-      targetPort: 8091
+    - nodePort: 30163
+      port: 8080
+      targetPort: 8080
