--- a/service-deployment.yaml
+++ b/service-deployment.yaml
@@ -29,8 +29,6 @@ metadata:
 spec:
   selector:
     app: kotlin-service
-  type: NodePort
+  type: ClusterIP
   ports:
-    - nodePort: 30163
-      port: 8080
-      targetPort: 8080
+    - port: 8080
