--- a/service-deployment.yaml
+++ b/service-deployment.yaml
@@ -18,7 +18,7 @@ spec:
           imagePullPolicy: Always
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: 8091
 ---
 apiVersion: v1
 kind: Service
@@ -32,3 +32,4 @@ spec:
   type: LoadBalancer
   ports:
     - port: 8080
+      targetPort: 8091
